--- a/src/Components/About Me/AboutMe.module.css
+++ b/src/Components/About Me/AboutMe.module.css
@@ -7,6 +7,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    border-radius: 1rem;
 }
 .animation_deploy{
     opacity: 0;
