--- a/public/styles.css
+++ b/public/styles.css
@@ -5,12 +5,13 @@
     font-family: 'Space Grotesk', sans-serif;
 
 }
-
+html{
+    background-color: black;
+}
 body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: black;
 }
 div{
     background-color: black;
