--- a/src/Components/About Me/AboutMe.module.css
+++ b/src/Components/About Me/AboutMe.module.css
@@ -18,6 +18,17 @@
 
 }
 
+.about-me-container:hover{
+    animation: zoom 200ms linear forwards;
+
+}
+
+@keyframes zoom {
+    0%{transform: scale(1); }
+    100%{transform: scale(1.015);
+    }
+}
+
 @-webkit-keyframes fadeinout {
     0% {
         opacity: 0;
