--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+div{
+    background-color: black;
+}
 
 body::-webkit-scrollbar {
     width: 0.75rem
