--- a/src/Components/About Me/AboutMe.module.css
+++ b/src/Components/About Me/AboutMe.module.css
@@ -89,6 +89,7 @@
 
     .about-me-container{
         padding: 2rem;
+        margin: 1.5rem;
     }
     .aboutme {
         font-size: 2rem;
@@ -134,4 +135,8 @@
         font-size: 1.2rem;
     }
     
+}
+
+#aniport{
+    background-color: black;
 }
