--- a/src/Components/StartUpAnimation/FrontPageAnimation.css
+++ b/src/Components/StartUpAnimation/FrontPageAnimation.css
@@ -38,17 +38,25 @@
     margin: 0 auto;
     letter-spacing: .15em;
     animation:
-        typing 1s steps(30, end),
-        blink-caret .5s step-end infinite;
+        typing 4.5s steps(30, end) infinite,
+        blink-caret .75s step-end infinite;
 }
 
 @keyframes typing {
-    from {
+    0% {
         width: 0
     }
 
-    to {
+    27% {
         width: 100%
+    }
+
+    73%{
+        width: 100%;
+    }
+
+    100%{
+        width: 0;
     }
 }
 
