--- a/src/Components/NavBar.module.css
+++ b/src/Components/NavBar.module.css
@@ -7,7 +7,7 @@
     letter-spacing: 0.3rem;
     display: inline;
     pointer-events: all;
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Josephine Sans', sans-serif;
     font-weight: 800;
 
 
